--- a/index.html
+++ b/index.html
@@ -21,6 +21,34 @@
     <meta name="description"
       content="Facets: A free word association puzzle game. Play custom challenges with friends or take on the AI's Daily Puzzle — brain-teasing fun without distractions!" />
 
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "VideoGame",
+        "name": "Facets",
+        "url": "https://facets.bigtentgames.com",
+        "description": "Facets — a free browser-based word-association puzzle by Big Tent Games. This subdomain (facets.bigtentgames.com) hosts the Facets game, including Daily puzzles, user-created puzzles, and account-sync features via Big Tent Games.",
+        "publisher": {
+          "@type": "Organization",
+          "name": "Big Tent Games",
+          "url": "https://bigtentgames.com"
+        },
+        "author": {
+          "@type": "Person",
+          "name": "Wil Voss",
+          "url": "https://bigtentgames.com",
+          "sameAs": [
+            "https://wilvoss.com",
+            "https://portfolio.wilvoss.com"
+          ],
+          "jobTitle": "Game Designer, Creative Technologist"
+        },
+        "applicationCategory": "Game",
+        "operatingSystem": "Web",
+        "inLanguage": "en"
+      }
+    </script>
+
     <link rel="manifest" href="manifest.webmanifest" />
 
     <link rel="apple-touch-icon" sizes="1024x1024" href="images/icon1024-apple-touch.png" />
