--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
         </notification>
         <notification :class="{show: appStateShowMeta}" class="meta">
           <button @click="HandleOldGameClick($event, todaysDaily)" class="dailycta"
-            :class="{show: !appStateShowUpdateButton && !appStateShowNotification && vsShowDaily && dailyIsFreshToday && appStateShowMeta, blink: appStateFirstRunGuessingIndex === -1}">Solve
+            :class="{show: !appStateShowUpdateButton && !appStateShowNotification && vsShowDaily && dailyIsFreshToday && appStateShowMeta}">Solve
             Today's Facet!</button>
           <header>
             <h1>{{appDataGameName}}</h1>
@@ -157,8 +157,12 @@
           <small style="cursor: pointer;" v-if="isAuthenticated && userEmail"
             @click="appStateShowSettings = true">Logged in to Big Tent
             Games</small>
-          <button v-if="!isAuthenticated" @click="HandleLoginClick">Log in / Sign
-            up</button>
+          <small v-if="!isAuthenticated" @click="HandleLoginClick" style="text-align: center;">
+            <a href="#">Log in or sign up now</a>
+            <br />
+            Sync your name and settings across devices!
+          </small>
+
           <icon
             :class="{show: appStateIsGettingAnonymousGames || appStateIsGettingDailyGames || appStateIsGettingDailyGameStats}"
             style="position: relative" class="spinner"></icon>
